# Ghost-Ship

./: .gitattributes  .gitignore  .gitmodules  .linguist  .linguistrc  CMakeLists.txt  Makefile  README.md  VERSION  cryptostream_marker.cpp  go.mod  large_example.cpp  streamer.hpp  test.cpp
.github/workflows/: ci.yml
clib/: CMakeLists.txt  LICENSE  README.md  benchmark.cpp  streamer.cpp  streamer.hpp
cmd/gs/: main.go
configs/: example-node.yaml
internal/audit/: audit.go  audit_test.go  telegram.go
internal/config/: manifest.go  schema.go
internal/extractor/: certs.go  extractor.go  extractor_test.go  restore.go  restore_test.go  sqlite.go  transport.go  transport_stub.go
internal/mocks/: mock_sshutil.go
internal/nomad/: docker.go  nomad.go  nomad_test.go
internal/provisioner/: hardening.go  provisioner.go  provisioner_test.go  services.go  services_test.go
pkg/sshutil/: runner.go
